@@ -14,6 +14,7 @@ config MACH_MX31ADS
 config MACH_EXBIBLIO_ROSENCRANTZ
 	bool "Exbiblio Rosencrantz Board"
 	select ARCH_MX31
+	select USES_DM9000
 
 endchoice
 
